--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="#" type="image/x-icon"><!--LOGO YET TO BE DECIDED-->
+    <link rel="stylesheet" href="farmer.css">
+    <title>Farmer</title><!-- NAME YET TO BE DECIDED-->
+</head>
+<body>
+    <main class="background">
+        <section class="loginSignup">
+         
+        </section>
+    </main>
+</body>
+</html>
