--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Email Adress/Mob No.</p>
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
             <p>Set Password</p>
-            <input type="password" name="password" placeholder="Enter your password" required>
+            <input type="password" name="password" placeholder="Create your password" required>
             <input type="checkbox" id="showPassword"><span>show password</span>
             <button>Sign Up</button>
             <p>Already have an account</p><a href="#">Log In</a>
