--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <section class="formContainer" id="buySellContainer">
                 <p class="LableTxt" id="formLabel">What are you using this Website for?</p>
                 <div class="optionContainer">
-                <div><input type="radio" name="role" value="buyer" required><label class="LableTxt">&nbsp;Buying</label></div>
-                <div><input type="radio" name="role" value="seller" required><label class="LableTxt">&nbsp;Selling</label></div>
+                <div><input type="radio" id="buyRadio" name="role" value="buyer" required><label class="LableTxt">&nbsp;Buying</label></div>
+                <div><input type="radio" id="sellRadio" name="role" value="seller" required><label class="LableTxt">&nbsp;Selling</label></div>
                 </div>
             </section>
 
@@ -66,6 +66,6 @@
             
        
     </main>
-    <script src="krishi.js"></script>
+    <script src="sigupLogin.js"></script>
 </body>
 </html>
