--- a/mainPage.html
+++ b/mainPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishi-Home page</title>
     <script src="https://kit.fontawesome.com/9f76eb440c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="homePage.css">
+    <link rel="stylesheet" href="mainPage.css">
 </head>
 <body>  
         <nav class="navbar">
