--- a/mainPage.html
+++ b/mainPage.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="mainPage.css">
 </head>
 <body>  
-        <nav class="navbar">
+        <!--NAVBAR-->
+         <nav class="navbar">
             <figure id="logo"></figure>
             <div class="links">
-                <a href="#" class="btn">Home</a>
-                <a href="" class="btn">Marketplace</a>
-                <a href="" class="btn">Contract</a>
+                <button href="#" class="btn" id="home">Home</button>
+                <button href="" class="btn" id="marketplace">Marketplace</button>
+                <button href="" class="btn" id="contract">Contract</button>
+            </div>
+            <div class="searchContainer">
+
             </div>
             <div class="profile"></div>
         </nav>
+
+       <!--MAIN-->
         <main>
            <section>jgcjhv</section>
            <section class="cards">
@@ -56,7 +62,8 @@
           <label for="search-box" class="fa-solid fa-magnifying-glass"></label>
         </form>
         -->
-    
+     
       </header>
+      <script src="mainPage.js"></script>
 </body>
 </html>
