--- a/mainPage.html
+++ b/mainPage.html
@@ -6,20 +6,35 @@
     <title>Krishi-Home page</title>
     <script src="https://kit.fontawesome.com/9f76eb440c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mainPage.css">
-</head>
+    <!--BOOSTRAP AND FONTAWESOME CDN-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--FONTS-->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  </head>
 <body>  
         <!--NAVBAR-->
          <nav class="navbar">
-            <figure id="logo"></figure>
-            <div class="links">
+            
+          <figure id="logo"></figure>
+
+          <div class="links">
                 <button href="#" class="btn" id="home">Home</button>
                 <button href="" class="btn" id="marketplace">Marketplace</button>
                 <button href="" class="btn" id="contract">Contract</button>
-            </div>
-            <div class="searchContainer">
+          </div>
+                  
+          <div class="searchContainer">
+              <div style="width: fit-content"><input type="search" placeholder="Search..." class="searchInput"></div>
+              <button class="searchBtn"><i class="bi bi-search"></i></button>
+          </div>
 
-            </div>
-            <div class="profile"></div>
+          <div class="profile">
+            <p>Profile&nbsp;</p>
+            <div class="fa-solid fa-user" id="profileBtn"></div>
+          </div>
+
+        <!--NAVBAR END-->
         </nav>
 
        <!--MAIN-->
