--- a/mainPage.html
+++ b/mainPage.html
@@ -41,7 +41,20 @@
         <main>
            <section>jgcjhv</section>
            <section class="cards">
-               <div class="card"></div>
+
+               <div class="card">
+                 <section class="itemImgContainer">
+                    <figure class="itemImg"></figure>
+                    <section class="priceContainer">
+                       <p class="itemName">Onions</p>
+                    </section>
+                 </section>
+
+                 <section class="itemDescription">
+
+                 </section>
+               </div>
+
                <div class="card"></div>
                <div class="card"></div>
                <div class="card"></div>
