--- a/mainPage.html
+++ b/mainPage.html
@@ -39,7 +39,7 @@
 
        <!--MAIN-->
         <main>
-           <section>jgcjhv</section>
+           <section>Archit is waste of Space</section>
            <section class="cards">
 
                <div class="card">
