--- a/mainPage.html
+++ b/mainPage.html
@@ -51,7 +51,10 @@
                  </section>
 
                  <section class="itemDescription">
-
+                    <h3 class="Contract">Contract</h3><br>
+                    <p>Qty:</p><br>
+                    <p>Amount:</p><br>
+                    <p>Delivery date:</p><br>
                  </section>
                </div>
 
