--- a/mainPage.html
+++ b/mainPage.html
@@ -47,36 +47,255 @@
            <section class="cards">
 
                <div class="card">
-                 <figure class="itemImgContainer"></figure>
+                 <figure class="itemImgContainer"  id="onion"></figure>
                  <section class="itemDescription">
-                  <p class="itemName">Onions</p><br>
-                  <p>Qty(in Kg): 11</p><br>
-                  <p>Cost(per Kg): 75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
-                  <button id="addBtn">Add</button>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
-               </section>
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 5 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
                </div>
 
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
+               <div class="card">
+                <figure class="itemImgContainer" id="potato"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Potatoes</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">865Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹50.00</p><br>
+                    <p>Delivery date: 1 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>    
+               </div>
 
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
 
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
-               <div class="card"></div>
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+               
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                 <section class="itemDescription">
+                     <p class="itemName">Onions</p><br>
+                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                     <p>Cost(per Kg): ₹75.54</p><br>
+                     <p>Delivery date: 2 days</p><br>
+                     <section class="addBtnForm">
+                         <button class="addBtn">Add</button>
+                         <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                     </section>
+                 </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
+                    </section>
+                </section>
+               </div>
+
+               <div class="card">
+                <figure class="itemImgContainer"></figure>
+                <section class="itemDescription">
+                    <p class="itemName">Onions</p><br>
+                    <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
+                    <p>Cost(per Kg): ₹75.54</p><br>
+                    <p>Delivery date: 2 days</p><br>
+                    <section class="addBtnForm">
+                        <button class="addBtn">Add</button>
+                        <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required placeholder="Quantity">
+                    </section>
+                </section>
+               </div>
+
            </section>
         </main>
         <!-- 
