--- a/mainPage.html
+++ b/mainPage.html
@@ -6,6 +6,8 @@
     <title>Krishi-Home page</title>
     <script src="https://kit.fontawesome.com/9f76eb440c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mainPage.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <!--BOOSTRAP AND FONTAWESOME CDN-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -75,9 +77,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="muskmelon"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Muskmelon</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -89,9 +91,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="corn"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Corn</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -103,9 +105,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="okra"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Okra</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -117,9 +119,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="tomato"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Tomato</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -131,9 +133,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="pea"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Peas</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -145,9 +147,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="spinach"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Spinach</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -159,9 +161,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="cabbage"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Cabbage</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -172,9 +174,9 @@
                  </section>
                </div>
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="eggplant"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Eggplant</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -185,9 +187,9 @@
                  </section>
                </div>
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="rice"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Rice</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -199,9 +201,9 @@
                </div>
                
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="wheat"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Wheat</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -213,9 +215,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="sugarcane"></figure>
                  <section class="itemDescription">
-                     <p class="itemName">Onions</p><br>
+                     <p class="itemName">Sugarcane</p><br>
                      <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                      <p>Cost(per Kg): ₹75.54</p><br>
                      <p>Delivery date: 2 days</p><br>
@@ -227,9 +229,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="oats"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Oats</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -241,9 +243,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="pear"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Pear</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -255,9 +257,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="orange"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Orange</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -269,9 +271,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="lemon"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Lemons</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
@@ -283,9 +285,9 @@
                </div>
 
                <div class="card">
-                <figure class="itemImgContainer"></figure>
+                <figure class="itemImgContainer" id="watermelon"></figure>
                 <section class="itemDescription">
-                    <p class="itemName">Onions</p><br>
+                    <p class="itemName">Watermelon</p><br>
                     <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
                     <p>Cost(per Kg): ₹75.54</p><br>
                     <p>Delivery date: 2 days</p><br>
