--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="#" type="image/x-icon"><!--LOGO YET TO BE DECIDED-->
+    <!--LOGO TITLE-->
+    <link rel="icon" type="image/png" href="images/logoTitle.png">
     <link rel="stylesheet" href="signupLogin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
