--- a/mainPage.html
+++ b/mainPage.html
@@ -53,10 +53,10 @@
             <div class="card">
               <figure class="itemImgContainer"  id="onion"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Onions</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 5 days</p><br>
+                  <p class="itemName" id="itemName">Onions</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 5 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" min="1" max="1000" required>
@@ -67,10 +67,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="potato"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Potatoes</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">865Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹50.00</p><br>
-                 <p>Delivery date: 1 days</p><br>
+                 <p class="itemName">Potatoes</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">865Kg In Stock</section>
+                 <p>Cost(per Kg): ₹50.00</p>
+                 <p>Delivery date: 1 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -81,10 +81,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="muskmelon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Muskmelon</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Muskmelon</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -95,10 +95,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="corn"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Corn</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Corn</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -109,10 +109,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="okra"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Okra</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Okra</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -123,10 +123,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="tomato"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Tomato</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Tomato</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -137,10 +137,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="pea"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Peas</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Peas</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -151,10 +151,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="spinach"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Spinach</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Spinach</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -165,10 +165,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="cabbage"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Cabbage</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Cabbage</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -178,10 +178,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="eggplant"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Eggplant</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Eggplant</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -191,10 +191,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="rice"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Rice</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Rice</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -205,10 +205,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="wheat"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Wheat</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Wheat</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -219,10 +219,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="sugarcane"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Sugarcane</p><br>
-                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                  <p>Cost(per Kg): ₹75.54</p><br>
-                  <p>Delivery date: 2 days</p><br>
+                  <p class="itemName">Sugarcane</p>
+                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                  <p>Cost(per Kg): ₹75.54</p>
+                  <p>Delivery date: 2 days</p>
                   <section class="addBtnForm">
                       <button class="addBtn">Add</button>
                       <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -233,10 +233,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="oats"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Oats</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Oats</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -247,10 +247,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="pear"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Pear</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Pear</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -261,10 +261,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="orange"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Orange</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Orange</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -275,10 +275,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="lemon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Lemons</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Lemons</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required>
@@ -289,10 +289,10 @@
             <div class="card">
              <figure class="itemImgContainer" id="watermelon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Watermelon</p><br>
-                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section><br>
-                 <p>Cost(per Kg): ₹75.54</p><br>
-                 <p>Delivery date: 2 days</p><br>
+                 <p class="itemName">Watermelon</p>
+                 <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
+                 <p>Cost(per Kg): ₹75.54</p>
+                 <p>Delivery date: 2 days</p>
                  <section class="addBtnForm">
                      <button class="addBtn">Add</button>
                      <input type="number" placeholder="Quantity" class="numberInput" name="numberInput" min="1" max="1000" required placeholder="Quantity">
@@ -379,7 +379,7 @@
         <li><a class="footerLink">Refunds</a></li>
       </ul></div>
   </div>
-    <p class="greytxt">Conditions of Use & Sale&nbsp;&nbsp;|&nbsp;&nbsp;Privacy Notice&nbsp;&nbsp;|&nbsp;&nbsp;Interest-Based Ads</p><br>
+    <p class="greytxt">Conditions of Use & Sale&nbsp;&nbsp;|&nbsp;&nbsp;Privacy Notice&nbsp;&nbsp;|&nbsp;&nbsp;Interest-Based Ads</p>
     <span id="poo" class="greytxt"><i class="bi bi-c-circle"></i> Demo site</span>
 </footer>
 
