--- a/mainPage.html
+++ b/mainPage.html
@@ -67,7 +67,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="potato"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Potatoes</p>
+                 <p class="itemName" id="itemName">Potatoes</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">865Kg In Stock</section>
                  <p>Cost(per Kg): ₹50.00</p>
                  <p>Delivery date: 1 days</p>
@@ -81,7 +81,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="muskmelon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Muskmelon</p>
+                 <p class="itemName" id="itemName">Muskmelon</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -95,7 +95,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="corn"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Corn</p>
+                 <p class="itemName" id="itemName">Corn</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -109,7 +109,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="okra"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Okra</p>
+                 <p class="itemName" id="itemName">Okra</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -123,7 +123,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="tomato"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Tomato</p>
+                  <p class="itemName" id="itemName">Tomato</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -137,7 +137,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="pea"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Peas</p>
+                 <p class="itemName" id="itemName">Peas</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -151,7 +151,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="spinach"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Spinach</p>
+                 <p class="itemName" id="itemName">Spinach</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -165,7 +165,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="cabbage"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Cabbage</p>
+                  <p class="itemName" id="itemName">Cabbage</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -178,7 +178,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="eggplant"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Eggplant</p>
+                  <p class="itemName" id="itemName">Eggplant</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -191,7 +191,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="rice"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Rice</p>
+                  <p class="itemName" id="itemName">Rice</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -205,7 +205,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="wheat"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Wheat</p>
+                  <p class="itemName" id="itemName">Wheat</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -219,7 +219,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="sugarcane"></figure>
               <section class="itemDescription">
-                  <p class="itemName">Sugarcane</p>
+                  <p class="itemName" id="itemName">Sugarcane</p>
                   <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                   <p>Cost(per Kg): ₹75.54</p>
                   <p>Delivery date: 2 days</p>
@@ -233,7 +233,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="oats"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Oats</p>
+                 <p class="itemName" id="itemName">Oats</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -247,7 +247,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="pear"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Pear</p>
+                 <p class="itemName" id="itemName">Pear</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -261,7 +261,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="orange"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Orange</p>
+                 <p class="itemName" id="itemName">Orange</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -275,7 +275,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="lemon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Lemons</p>
+                 <p class="itemName" id="itemName">Lemons</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
@@ -289,7 +289,7 @@
             <div class="card">
              <figure class="itemImgContainer" id="watermelon"></figure>
              <section class="itemDescription">
-                 <p class="itemName">Watermelon</p>
+                 <p class="itemName" id="itemName">Watermelon</p>
                  <section class="availability" style="color: rgb(53, 161, 53);">500Kg In Stock</section>
                  <p>Cost(per Kg): ₹75.54</p>
                  <p>Delivery date: 2 days</p>
