--- a/marketplacePage.html
+++ b/marketplacePage.html
@@ -42,9 +42,9 @@
 
          <section class="linksContainer">
           <div class="links">
-            <button href="#" class="btn" id="home">Home</button>
-            <button href="" class="btn" id="marketplace">Marketplace</button>
-            <button href="" class="btn" id="contract">Contract</button>
+            <a href="mainPage.html" class="btn" id="home">Home</a>
+            <a href="marketplacePage.html" class="btn" id="marketplace">Marketplace</a>
+            <a href="ContractPage.html" class="btn" id="contract">Contract</a>
       </div>
          </section>
 
