--- a/marketplacePage.html
+++ b/marketplacePage.html
@@ -383,6 +383,6 @@
     <span id="poo" class="greytxt"><i class="bi bi-c-circle"></i> Demo site</span>
 </footer>
 
-      <script src="mainPage.js"></script>
+      <script src="marketplacePage.js"></script>
 </body>
 </html>
