--- a/contractPage.html
+++ b/contractPage.html
@@ -383,6 +383,6 @@
     <span id="poo" class="greytxt"><i class="bi bi-c-circle"></i> Demo site</span>
 </footer>
 
-      <script src="mainPage.js"></script>
+      <script src="contractPage.js"></script>
 </body>
 </html>
