--- a/mainPage.html
+++ b/mainPage.html
@@ -36,8 +36,8 @@
        <!--MAIN-->
         <main>
           <section class="topDecor">
-            <p id="exploreTxt">Explore</p>
-            <p id="contractTxt">contracts</p>
+            <p id="exploreTxt">Home</p>
+            <p id="contractTxt">page</p>
          </section>
 
          <section class="linksContainer">
