--- a/marketplacePage.html
+++ b/marketplacePage.html
@@ -37,7 +37,7 @@
         <main>
           <section class="topDecor">
             <p id="exploreTxt">Explore</p>
-            <p id="contractTxt">contracts</p>
+            <p id="contractTxt">marketplace</p>
          </section>
 
          <section class="linksContainer">
