--- a/contractPage.html
+++ b/contractPage.html
@@ -42,9 +42,9 @@
         <!--HOME MARKETPLACE CONTRACT-->
        <section class="linksContainer">
         <div class="links">
-          <button href="" class="btn" id="home">Home</button>
-          <button href="#" class="btn" id="marketplace">Marketplace</button>
-          <button href="mainPage.html" class="btn" id="contract">Contract</button>
+          <button href="mainPage.html" class="btn" id="home">Home</button>
+          <button href="marketplacePage.html" class="btn" id="marketplace">Marketplace</button>
+          <button href="contractPage.html" class="btn" id="contract">Contract</button>
     </div>
        </section>
        <!-- Floating Create Contract Bar -->
