--- a/marketplacePage.html
+++ b/marketplacePage.html
@@ -408,7 +408,7 @@
   setInterval(updatePrices, 30000); // 30 seconds in milliseconds
 
   function openContractPage() {
-      window.location.href = 'index.html'; // Replace with the URL of the page you want to open
+      window.location.href = 'stocks.html'; // Replace with the URL of the page you want to open
   }
 </script>
 
