--- a/mainPage.html
+++ b/mainPage.html
@@ -25,8 +25,9 @@
               </div>
 
               <div class="profile">
-                    <p>Profile&nbsp;</p>
-                    <div class="fa-solid fa-user" id="profileBtn"></div>
+                <div class="fa-solid fa-user" id="profileBtn"></div>
+                    <p id="nameProfile">&nbsp;Profile</p>
+                    
               </div>
 
             </nav>
@@ -36,15 +37,15 @@
        <!--MAIN-->
         <main>
           <section class="topDecor">
-            <p id="exploreTxt">Home</p>
-            <p id="contractTxt">page</p>
+            <p id="exploreTxt">Explore</p>
+            <p id="contractTxt">contracts</p>
          </section>
 
          <section class="linksContainer">
           <div class="links">
             <a href="mainPage.html" class="btn" id="home">Home</a>
             <a href="marketplacePage.html" class="btn" id="marketplace">Marketplace</a>
-            <a href="contractPage.html" class="btn" id="contract">Contract</a>
+            <a href="ContractPage.html" class="btn" id="contract">Contract</a>
       </div>
          </section>
 
@@ -284,6 +285,7 @@
                 </section>
             </main>
   
+            
           </div>  
 
         </main>
