--- a/mainPage.html
+++ b/mainPage.html
@@ -45,7 +45,7 @@
           <div class="links">
             <a href="mainPage.html" class="btn" id="home">Home</a>
             <a href="marketplacePage.html" class="btn" id="marketplace">Marketplace</a>
-            <a href="ContractPage.html" class="btn" id="contract">Contract</a>
+            <a href="contractPage.html" class="btn" id="contract">Contract</a>
       </div>
          </section>
 
