--- a/marketPlace.html
+++ b/marketPlace.html
@@ -42,9 +42,9 @@
         <!--HOME MARKETPLACE CONTRACT-->
        <section class="linksContainer">
         <div class="links">
-          <a href="home.html" class="btn" id="home">Home</a>
-          <a href="marketPlace.html" class="btn" id="marketplace">Marketplace</a>
-          <a href="mainPage.html" class="btn" id="contract">Contract</a>
+          <a href="mainPage.html" class="btn" id="home">Home</a>
+          <a href="marketplacePage.html" class="btn" id="marketplace">Marketplace</a>
+          <a href="contactPage.html" class="btn" id="contract">Contract</a>
     </div>
        </section>
        <!-- Floating Create Contract Bar -->
