--- a/contractPage.html
+++ b/contractPage.html
@@ -48,7 +48,7 @@
     </div>
        </section>
        <!-- Floating Create Contract Bar -->
-       <a href="create-contract.html" id="floatingButton">
+       <a href="Create-contract.html" id="floatingButton">
         <i class="bi bi-plus"></i> <!-- Using Bootstrap icons -->
       </a>
       
