--- a/marketplacePage.html
+++ b/marketplacePage.html
@@ -25,7 +25,7 @@
               </div>
 
               <div class="profile">
-                    <p>Profile&nbsp;</p>
+                    <p id="nameProfile">Profile&nbsp;</p>
                     <div class="fa-solid fa-user" id="profileBtn"></div>
               </div>
 
