--- a/Create_contract.html
+++ b/Create_contract.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishi-Contract Page</title>
     <script src="https://kit.fontawesome.com/9f76eb440c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Create-contract.css">
+    <link rel="stylesheet" href="Create_contract.css">
     <!--BOOSTRAP AND FONTAWESOME CDN-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
