--- a/contractPage.html
+++ b/contractPage.html
@@ -341,7 +341,7 @@
       </footer>
       <script>
         function openContractPage() {
-          window.location.href = 'contract-description.html'; // Replace with the URL of the page you want to open
+          window.location.href = 'contract_description.html'; // Replace with the URL of the page you want to open
         }
       </script>
       
