--- a/stocks.html
+++ b/stocks.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p> Hello World !</p>
     <!-- NAVBAR -->
     <nav class="navbar">
         <figure id="logo"></figure>
